# aquaflow

./: .env.example  .env.production  .env.root.example  .gitignore  CHEATSHEET.txt  CHECKLIST.md  DEPLOYMENT_GUIDE.md  PROJECT_MAP.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  SERVER_SETUP_COMMANDS.md  TASKS.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  himalay water.xls  import_dubli.py  launch.ps1  quick-deploy.sh  run_tunnels.ps1  start.bat  start.ps1  stop.bat  stop.ps1
backend/: .env.example  .env.production  .env.production.example  alembic.ini  debug_check.py  pyproject.toml  requirements.txt  sync_warehouse.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  621e7c4dc734_add_container_tracking_to_products.py  a7b3c9d4e5f6_add_contact_phone_to_orders.py  b8c4d5e6f7g8_add_delivered_quantity_to_order_items.py  c1d2e3f4g5h6_add_soft_delete_and_product_threshold.py  d4e5f6g7h8i9_add_missing_tables_and_columns.py  e1328f511713_add_courier_cash_collections_table.py  e5f6g7h8i9j0_add_show_to_clients_to_products.py  f1g2h3i4j5k6_add_is_deleted_to_products.py  f8492628e93c_add_courier_inventory_table.py  g2h3i4j5k6l7_add_client_groups.py  h3i4j5k6l7m8_operator_cash.py  i4j5k6l7m8n9_add_courier_expenses.py  (+1 more)
backend/app/: main.py
backend/app/db/: base.py  (+1 more)
backend/scripts/: seed_admin.py  seed_regions.py
backend/tests/: conftest.py  test_auth.py  test_clients.py  test_concurrent_assign.py  test_order_edit.py  test_orders.py  test_rbac.py  test_shift_close.py  test_shift_open.py  test_warehouse.py
(+192 files in other folders)
