[tool.poetry]
name = "suv-pro-backend"
version = "0.1.0"
description = "SaaS Water Delivery Platform — Backend API"
authors = ["SuvPro Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
redis = {extras = ["hiredis"], version = "^5.0.4"}
celery = {extras = ["redis"], version = "^5.4.0"}
httpx = "^0.27.0"
openpyxl = "^3.1.2"
pillow = "^10.3.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
aiosqlite = "^0.20.0"
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
